--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,10 @@
       #demo {
         width: 100%;
       }
+      google-chart {
+        height: 300px;
+        width: 50em;
+      }
     </style>
   </head>
   <body>
